--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,57 @@
 .main_container{
-    background-image: url("https://www.wallpaperbetter.com/wallpaper/511/857/77/audi-r8-dark-hd-1080P-wallpaper.jpg");
+    background-image: url("./audi.jpeg");
     background-position: center;
+}
+.mainContainerFilter{
+    background-color: rgba(4, 1, 14, 0.5);
+    width: 100%;
+    height: 100%;
+
+}
+.big-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.navigate{
+    color: #ffac33;
+    
+}
+.navigate ul{
+    display: flex;
+    flex-wrap: nowrap;
+    float: right;
+}
+.navigate ul li{
+    list-style: none;
+    margin: 5px;
+    padding-right: 10px;
+    cursor: pointer;
+}
+ 
+li{
+  color: #ffac33;
+}
+
+
+
+@media (max-width: 768px){
+
+.navigate ul{
+    display: none;
+    flex-flow: column nowrap;
+    background-color: white;
+    width: 300px;
+    height: 100vh;
+    margin-top: 0;
+    position: fixed;
+    right: 0;
+    padding-top: 3.5rem;
+
+
+}
+.navigate li{
+    color: #03002E;
+}
 }
