--- a/public/styles.css
+++ b/public/styles.css
@@ -10,19 +10,39 @@
 }
 .MiscellaneousContainer{
     background-color: #03002E ;
-    height: 110vh;
+    height: 100vh;
     width: 100%;
     transform: skewY(9deg);
     color: white;
+    
 
 }
 .carouselContainerInfo{
     transform: skewY(-9deg);
+    width: 100%;
 }
 .choiceContainerInfo{
     padding-top: 5rem;
-}
 
+}
+.choiceHeading{
+    background-color: #F77E21;
+    width: 19rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 10px;
+    margin-bottom: 6rem;
+}
+.mainChoiceHeader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.choiceChildren{
+    display: flex;
+}
 .informationContainer{
     height: 100vh;
     width: 100%;
@@ -43,14 +63,63 @@
     color: #ffac33;
     
 }
-.choiceHeading{
-    background-color: #f36b2a;
+.buildIconContainer{
+    border-radius: 50px;
+    border: 2px solid #03002E;
+    background-color: white;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.carouselInformationContainer{
+    background-color: white;
+    width: 90%;
+    height: 25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.mainBuildIconContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.servicesOfferedContainer{
+    background-color: #03002E;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4rem;
+    width: 20rem;
+    border-radius: 10px;
+}
+.mainServiceOfferedContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+.typographyContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 .carouselContainer{
-    background-color: #f36b2a;
+    background-color: #F77E21;
     transform: skewY(9deg);
     height: 110vh;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .navigate ul{
     display: flex;
@@ -87,6 +156,19 @@ li{
 }
 .navigate li{
     color: #03002E;
+}
+.choiceChildren{
+    display: flex;
+    flex-direction: column;
+}
+.choiceHeading{
+    width: 15rem;
+    margin-bottom: 2rem;
+    
+}
+
+.MiscellaneousContainer{
+    height: 150vh;
 }
 }
 
