--- a/public/styles.css
+++ b/public/styles.css
@@ -6,12 +6,14 @@
     background-position: center;
     background-attachment: fixed;
 }
+
 .mainContainerFilter{
     background-color: rgba(4, 1, 14, 0.7);
     width: 100%;
     height: 100%;
 
 }
+
 .contactContainer{
     padding-top: 10rem;
 }
@@ -290,6 +292,11 @@ textarea{
 .contactHeadingContainer h1{
     font-weight: bold;
     font-size: 30px;
+}
+.navigation1ref{
+    text-decoration: none;
+    color: #ffac33;
+    font-family: sans-serif;
 }
 
 .contactUsContentContainer{
