--- a/src/components/headerbutton.css
+++ b/src/components/headerbutton.css
@@ -16,6 +16,7 @@
   .button:hover,
   .button:active {
     background-color: #010057;
+    border: 1px solid #0039a6;
   }
   
   .icon {
@@ -34,7 +35,7 @@
   
   .button:hover .badge,
   .button:active .badge {
-    background-color: #92320c;
+    background-color: #0039a6;
   }
   
   .bump {
